Fixes in Call Scheduling

--- a/views/callScheduling/schedulingPageForExpert.jade
+++ b/views/callScheduling/schedulingPageForExpert.jade
@@ -13,7 +13,6 @@ head
     script(src='/bower_dependencies/jquery/jquery.js')
     script(src='/bower_dependencies/bootstrap/dist/js/bootstrap.min.js')
     script(src='/bower_dependencies/moment/moment.js')
-    script(src='/bower_dependencies/moment/moment.js')
     script(src='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js')
     script(src='/bower_dependencies/bootbox/bootbox.js')
     script(src='/js/lib/jquery.validate.js')
@@ -69,7 +68,7 @@ head
                                         .col-md-8
                                             .form-group
                                                 .input-group.date.datepicker
-                                                    input.form-control(type='text', disabled=true)
+                                                    input.form-control#startTime(type='text', disabled=true)
                                                     span.input-group-addon
                                                         span.glyphicon-calendar.glyphicon
                                 .payment-summary.call-inputs
