--- a/views/callScheduling/schedulingPageForCaller.jade
+++ b/views/callScheduling/schedulingPageForCaller.jade
@@ -1,7 +1,35 @@
 title Scheduling
-- var expertUser = call.integration_member.user
+doctype html
+head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=false')
+    link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
+    link(href='/bower_dependencies/bootstrap/dist/css/bootstrap.min.css')
+    link(href='/css/bootstrap.min.css', rel='stylesheet')
+    link(href='/css/main.css', rel='stylesheet')
+    link(href='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css', rel='stylesheet')
+    //link(href='/css/style.css', rel='stylesheet')
+    script(src='/bower_dependencies/jquery/jquery.js')
+    script(src='/bower_dependencies/bootstrap/dist/js/bootstrap.min.js')
+    script(src='/bower_dependencies/moment/moment.js')
+    script(src='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js')
+    script(src='/bower_dependencies/bootbox/bootbox.js')
+    script(src='/js/lib/jquery.validate.js')
+.masthead(role='banner')
+    .container
+        .masthead-brand
+            a.logo.hidden-xs(href='#')
+            a.icon.visible-xs(href='#')
+        .masthead-controls
+            .masthead-control-field
+                .field-label
+                    | Language
+                .field-menu
+                    select(name='ui_language')
+                        option(value='en', selected='')
+                            | English
 
-include ../header
 // /.masthead
 .matter
     .container
@@ -12,7 +40,7 @@ include ../header
                         .call-profile
                             h1
                                 | Details for call with&nbsp;
-                                span= formatName(expertUser.first_name, expertUser.last_name, expertUser.title)
+                                span= formatName(call.integration_member.user.first_name, call.integration_member.user.last_name, call.integration_member.user.title)
                             .meta
                                 h5 Call Id
                                 p= call.id
@@ -36,7 +64,10 @@ include ../header
                                             input(type='radio', name='startTime', value=slot, checked=selectedStartTime == slot)
                                             label= formatDate(slot)
                                     h3 Or Suggest another time convenient to you
-                                    input#startTime(type='text', name='startTimeInput')
+                                    .input-group.date.datepicker
+                                        input#startTime(type='text', name='startTimeInput')
+                                        span.input-group-addon
+                                            span.glyphicon-calendar.glyphicon
                                 .payment-summary.call-inputs
                                     h1
                                         i.icon-phone
