Expert can't schedule call with himself

--- a/views/dashboard/paymentComplete.jade
+++ b/views/dashboard/paymentComplete.jade
@@ -97,7 +97,7 @@ title ST- Payment Complete
                                         .table-row.total
                                             .table-cell.title Total
                                             .table-cell.amount= formatMoney(total, currency)
-                                .call-reversal
+                                //.call-reversal
                                     a.btn.btn-danger(href='index.html')
                                         | Cancel Call
                                         i.icon-cancel
