--- a/views/dashboard/memberSchedule.jade
+++ b/views/dashboard/memberSchedule.jade
@@ -30,35 +30,35 @@ block content
                                 input.form-control#title(type='text', name='title')
                             .form-group
                                 label.control-label Day(s) this Schedule is valid for
-                                select#day(name='day')
+                                select.selectpicker#day(name='day')
                                     - var days = {'1':'Monday','2':'Tuesday','3':'Wednesday','4':'Thursday','5':'Friday','6':'Saturday','0':'Sunday','1-5':'Weekdays','0,6':'Weekends'};
                                     each key,value in days
                                         option(value=value) !{key}
                             .form-group
                                 label.control-label Start Time
-                                select#startHour(name='startHour')
+                                select.selectpicker#startHour(name='startHour')
                                     - for (var i = 0; i <24 ; i++){
                                         option(value="#{i}") #{i}
                                     - }
                                 | :&nbsp
-                                select#startMinute(name = 'startMinute')
+                                select.selectpicker#startMinute(name = 'startMinute')
                                     - for (var i = 0; i <60 ; i++){
                                         option(value="#{i}") #{i}
                                     - }
                             .form-group
                                 label.control-label End Time
-                                select#endHour(name='endHour')
+                                select.selectpicker#endHour(name='endHour')
                                     - for (var i = 0; i <24; i++){
                                         option(value="#{i}") #{i}
                                     - }
                                 | :&nbsp
-                                select#endMinute(name='endMinute')
+                                select.selectpicker#endMinute(name='endMinute')
                                     - for (var i = 0; i <60 ; i++){
                                         option(value="#{i}") #{i}
                                     - }
                             .form-group.col-md-2
                                 label.control-label Price Unit
-                                select#priceUnit(data-width='auto', name='priceUnit')
+                                select.selectpicker#priceUnit(data-width='auto', name='priceUnit')
                                     option(value=1) Rs.
                                     option(value=2) $
                             form-group.col-md-3
