--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -124,11 +124,11 @@ include ../header
                         .user-profile
                             .hidden-xs.avatar
                                 .shadow
-                                    a(href=DashboardUrls.memberProfile(expert.id))
+                                    a(href=DashboardUrls.userProfile(expert.id))
                                         img(src=ApiUrlDelegate.userProfilePicture(user.id), width='100%', height='100%')
                             .info
                                 .info-upper
-                                    a.user-displayname(href=DashboardUrls.memberProfile(expert.id))= formatName(user.first_name, user.last_name, user.title)
+                                    a.user-displayname(href=DashboardUrls.userProfile(user.id))= formatName(user.first_name, user.last_name, user.title)
                                     if (user.date_of_birth)
                                         .user-age= moment().diff(moment(parseInt(user.date_of_birth)), 'years') + ' years'
                                 .info-lower
