--- a/views/callFlow/payment.jade
+++ b/views/callFlow/payment.jade
@@ -90,7 +90,7 @@ title ST-#{formatName(user.first_name, user.last_name, user.title)} | Payment fo
                                                         .table-cell.title Tax @#{Config.get(Config.CALL_TAX_PERCENT)}%
                                                     when 4
                                                         .table-cell.title Discount Coupon #{coupon.code}&nbsp;
-                                                            a.cancel-link(href=CallFlowUrls.removeCoupon()) Remove
+                                                            a.cancel-link(href=CallFlowUrls.removeCoupon() + '?code=#{coupon.code}') Remove
                                                 .table-cell.amount= formatMoney(line.amount, line.amount_unit)
                                     .table-row
                                         .table-cell.title
