Invite member working

--- a/views/dashboard/dashboard.jade
+++ b/views/dashboard/dashboard.jade
@@ -22,6 +22,8 @@ title SearchNTalk - DashBoard
                             li
                                 a(href=DashboardUrls.integration()) Networks
                             li
+                                a(href=DashboardUrls.userProfile(loggedInUser.id)) Profile
+                            li
                                 a(href='/payments') Payments
 .matter
     .container
