--- a/views/dashboard/header.jade
+++ b/views/dashboard/header.jade
@@ -5,14 +5,17 @@ head
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=false')
 
     link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
-    link(href='/css/bootstrap.min.css', rel='stylesheet')
+    link(href='/bower_dependencies/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
+    link(href='/bower_dependencies/bootstrapValidator/dist/css/bootstrapValidator.css', rel='stylesheet')
     link(href='/css/main.css', rel='stylesheet')
 
     //if lt IE 9
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
       script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
-    script(src='/bower_dependencies/jquery/jquery.min.js')
-    script(src='/bower_dependencies/bootstrap/dist/bootstrap.min.js')
+    script(src='/bower_dependencies/jquery/jquery.js')
+    script(src='/bower_dependencies/bootstrap/dist/js/bootstrap.js')
+    script(src='/bower_dependencies/bootstrapValidator/dist/js/bootstrapValidator.js')
+    script(src='/bower_dependencies/bootbox/bootbox.js')
 
     script.
         $(document).ready(function() {
