--- a/views/memberRegistration/register.jade
+++ b/views/memberRegistration/register.jade
@@ -48,8 +48,11 @@ include ../header
                                     .controls
                                         input(type='hidden', name='invitation_code', value=code)
                                         input.btn-primary.btn.btn-block(value='Register', type='submit')
-                                a.btn-linkedin.btn(href=MemberRegistrationUrls.linkedInLogin()) Login with LinkedIn
+                                a.btn-linkedin.btn#linkedInLink() Login with LinkedIn
                                 a.btn.btn-link(href=MemberRegistrationUrls.login()) Login
             // /.content
 include ../footer
+script.
+    var Timezone = JSON.parse('!{JSON.stringify(Timezone)}');
+    var linkedInUrl = '!{MemberRegistrationUrls.linkedInLogin()}';
 script(src='/js/app/expertRegistration/authenticate.js')
