Round off amount

--- a/views/dashboard/dashboard.jade
+++ b/views/dashboard/dashboard.jade
@@ -152,3 +152,4 @@ title SearchNTalk - DashBoard
                                 h5 Experience
                                 h1 5 yrs.
             // /.content
+include footer
