Create and edit coupon implented

--- a/views/dashboard/header.jade
+++ b/views/dashboard/header.jade
@@ -16,6 +16,10 @@ head
     script(src='/bower_dependencies/bootstrap/dist/js/bootstrap.js')
     script(src='/bower_dependencies/bootstrapValidator/dist/js/bootstrapValidator.js')
     script(src='/bower_dependencies/bootbox/bootbox.js')
+    script(src='/bower_dependencies/underscore/underscore.js')
+    script(src='/bower_dependencies/moment/moment.js')
+
+    script(src='/js/app/common.js')
 
     script.
         $(document).ready(function() {
