Create and edit coupon implented

--- a/views/dashboard/header.jade
+++ b/views/dashboard/header.jade
@@ -7,6 +7,7 @@ head
     link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
     link(href='/bower_dependencies/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
     link(href='/bower_dependencies/bootstrapValidator/dist/css/bootstrapValidator.css', rel='stylesheet')
+    link(href='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css', rel='stylesheet')
     link(href='/css/main.css', rel='stylesheet')
 
     //if lt IE 9
@@ -18,6 +19,7 @@ head
     script(src='/bower_dependencies/bootbox/bootbox.js')
     script(src='/bower_dependencies/underscore/underscore.js')
     script(src='/bower_dependencies/moment/moment.js')
+    script(src='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js')
 
     script(src='/js/app/common.js')
 
