--- a/views/dashboard/integration.jade
+++ b/views/dashboard/integration.jade
@@ -131,7 +131,7 @@ title SearchNTalk - DashBoard
                                     .row
                                         h5.col-xs-8= coupon.code
                                         div.header-link.col-xs-4
-                                            a.btn.btn-primary(data-id=coupon.id)#editCouponBtn
+                                            a.btn.btn-primary(data-id=coupon.id).editCouponBtn
                                                 i.icon-pencil
                                         div.billing-summary
                                             table
